# AgentRuche

./: .env.example  HOW_TO_WORK.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  app.py  pyproject.toml
backend/config/: db_config.py  logging_config.py  settings.py
backend/services/: analyzer.py  transcriber.py  worker.py
backend/tools/: database_tools.py
backend/utils/: minio_client.py  redis_queue.py
frontend/: Dockerfile  app.py  pyproject.toml
